@@ -1213,13 +1213,17 @@
     "admin": {
       "feirinha": {
         "no-items-in-user-fair": "Tu não possui itens anunciados na feira!",
-        "remove-announcement": "Remover anúncio {{index}}",
+        "remove-announcement": "Remover anúncio",
         "dont-exists": "Esse anúncio não existe mais!"
       },
       "silo": {
         "success": "Tudo feito! Tu aumentou o limite do teu silo",
         "poor": "Tu não tem estrelinhas o suficiente para aumentar o espaço de seu silo",
         "title": "Melhore seu silo",
+        "goto-fair": "Administrar feira",
+        "goto-fields": "Administrar campos",
+        "manage-fair": "Gerencie os produtos anunciados por ti na feira da vizinhança!",
+        "manage-fields": "Gerencie seus campos e seu silo!",
         "max-level-description": "O silo já está no nível máximo!",
         "button": "Melhorar silo",
         "description": "Aumente o limite de seu silo em **{{increase}}** espaços por apenas **{{cost}}** :star:\nAtualmente tu tem **{{limit}}** espaços de limite."
@@ -1228,8 +1232,6 @@
         "apply-to-all": "Aplicar em todos campos",
         "title": "Administrar campos",
         "select-item": "Escolha um item para usar nos campos",
-        "footer": "Administrando o campo {{field}}",
-        "footer-all": "Administrando todos campos",
         "no-upgrades": "Nenhuma melhoria aplicada no momento.",
         "upgrade": "{{emoji}} {{upgrade}}\n{{expireLabel}} <t:{{unix}}:R>",
         "expires": "Expira",
@@ -1246,8 +1248,8 @@
       "unlocked-field": "Você comprou esse terreno de seu vizinho!",
       "your-fields": "Seus Campos",
       "use-item": "Usar item",
-      "buy": "Comprar {{field}}",
-      "needed-items": "Esse campo está no terreno de seu vizinho. Ele concordou em te vender. Ele quer **{{star}}** :star: e **{{plants, list}}** por isso."
+      "buy": "Comprar campo",
+      "needed-items": "Esse campo está no terreno de seu vizinho. Para comprar, é necessário **{{star}}** :star:, **{{plants, list}}**"
     }
   },
   "titulo": {
